--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datenow-ts",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Package for working with dates and times in JavaScript and TypeScript",
   "license": "MIT",
   "main": "lib/main.js",
@@ -9,9 +9,11 @@
   "files": [
     "lib/**/*"
   ],
+  "repository": {
+    "directory": "https://github.com/leamoser/datenow-ts",
+    "type": "git"
+  },
   "scripts": {
-    "test": "./node_modules/.bin/jest --config jestconfig.json",
-    "debug": "tsc && node lib/main.js",
     "build": "tsc",
     "publish": "npm publish"
   },
@@ -22,9 +24,6 @@
     "new Date"
   ],
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.5"
   }
 }
